--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
 <body>
     <div class="header">
         <div class="logo"><img src="images/logo.jpeg"></div>
+        <div class="header=links">
+            <ul>
+                <li>menu</li>
+                <li>music</li>
+                <li>dress code</li>
+            </ul>
+        </div>
     </div>
-    <div class="intro"></div>
-    <div class="guest-list"></div>
+    <div class="intro">
+        <div class="section1">
+        <h1>this is the ideal dinner party</h1>
+        <p>hosted by me on the most important day of the year, Goya's birth, March 30th 1746</p>
+    </div>
+    <div class="section2"><p>i said what i said</p></div>
+     <div class="guest-list"></div>
     <div class="poem"></div>
+    </div>
+   
     <div class="footer"></div>
+
 </body>
 </html>
